--- a/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base.cfg
+++ b/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base.cfg
@@ -1,8 +1,9 @@
 <h4reco>
-outNameSuffix /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Oct2021/Reco/
+#outNameSuffix /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Oct2021/Reco/
+outNameSuffix ntuples/ECALTB_H4_Oct2021/
 path2data /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Oct2021/DataTree/
 pluginList TrgFilter H4Hodo DigiReco WFReco 
-run 10467
+run 14982
 maxEvents -1
 maxFiles -1
 </h4reco>
@@ -66,6 +67,7 @@ WFtreePrescale 100
 
 #---Channels
 <C5>
+type LiTEDTU 
 digiBoard 20
 digiGroup 0
 digiChannel 0
@@ -77,6 +79,11 @@ baselineInt 15 25
 signalWin 26 120 5 gaus
 signalInt 2 3
 LED 100 1 3
+#---Template building options
+#---Oversampling frequency (GHz)
+fOversampling 8
+#---Maximum frequency used in the linear interpolation to extract dt from the FFT phase spectrum (GHz)
+maxPhaseFitFreq 0.04
 </C5>
 
 <C4= C5>
