--- a/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base.cfg
+++ b/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base.cfg
@@ -1,9 +1,8 @@
 <h4reco>
-#outNameSuffix /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Oct2021/Reco/
-outNameSuffix ntuples/ECALTB_H4_Oct2021/
+outNameSuffix /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Oct2021/ntuples_c2escan_v3/
 path2data /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Oct2021/DataTree/
 pluginList TrgFilter H4Hodo DigiReco WFReco 
-run 14982
+run 14918
 maxEvents -1
 maxFiles -1
 </h4reco>
@@ -62,7 +61,7 @@ channelsNames= DigiReco.channelsNames
 timeRecoTypes CFD LED
 
 fillWFtree 1
-WFtreePrescale 100
+WFtreePrescale 1
 </WFReco>
 
 #---Channels
@@ -84,6 +83,11 @@ LED 100 1 3
 fOversampling 8
 #---Maximum frequency used in the linear interpolation to extract dt from the FFT phase spectrum (GHz)
 maxPhaseFitFreq 0.04
+<templateFit>  
+file /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Oct2021/ntuples_templates_v8/15153/templ/corrected_template.root tmpl_corr_smooth
+fitWin 0. 4 5
+</templateFit>
+
 </C5>
 
 <C4= C5>
@@ -201,15 +205,17 @@ baselineInt 20 40
 signalWin 40 1000 7 gaus
 signalInt 10 10
 CFD 0.5 5
-# <templateFit>  
-# file data/digitizer_templates_H4_Oct2018.root tmpl_MCP1
-# fitWin 0. 10 21
-# </templateFit>
+<templateFit>  
+#file /eos/home-c/camendol/ECALTB/ECAL_TB_Oct2021/ntuples/ECAL_H4_Oct2021_templates/ntuples_templates_v5//15153/templ/digitizer_template.root tmpl_MCP1_smooth
+file data/digitizer_template.root tmpl_MCP1_smooth
+fitWin 0. 10 30
+</templateFit>
 </MCP1>
 
 <MCP2= MCP1>
 digiChannel 2
-#templateFit.file data/digitizer_templates_H4_Oct2018.root tmpl_MCP2
+#templateFit.file /eos/home-c/camendol/ECALTB/ECAL_TB_Oct2021/ntuples/ECAL_H4_Oct2021_templates/ntuples_templates_v5//15153/templ/digitizer_template.root tmpl_MCP2_smooth
+templateFit.file data/digitizer_template.root tmpl_MCP2_smooth
 </MCP2>
 
 <CLK= MCP1>
@@ -222,10 +228,11 @@ LED 0 2 2 200 300
 # baseline window set to 4 periods
 baselineWin 5 126 
 signalWin 130 900 7 pol2
-# <templateFit>  
-# file data/digitizer_templates_H4_Oct2018.root tmpl_vfe_clk160
-# fitWin 0. 10 21
-# </templateFit>
+clkPeriod 6.238
+<templateFit>  
+file data/digitizer_template.root tmpl_CLK_smooth
+fitWin 0. 5 30
+</templateFit>
 </CLK>
 
 <void= MCP1>
