--- a/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_templates.cfg
+++ b/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_templates.cfg
@@ -1,21 +1,24 @@
 importCfg cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base.cfg
-h4reco.run 14918
-h4reco.outNameSuffix ntuples/ECAL_H4_Oct2021_templates_
+h4reco.run 15153
+h4reco.outNameSuffix /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Oct2021/ntuples_templates_v10/
 h4reco.pluginList+= T2F DFTTmpl WFRecoFFT TmplMaker
 h4reco.maxFiles -1
-h4reco.maxEvents -1
+h4reco.maxEvents 10000
+
+TrgFilter.treeName trig
+# TrgFilter.filterEvents 1
 
 #---Template maker
 <TmplMaker>
 pluginType TemplateMaker
 srcInstanceName DFTTmpl
-channelsNames C3_T
+channelsNames C2_T
 </TmplMaker>
 
 #---Oversampled pulse shape reconstruction
 <WFRecoFFT= WFReco>
 srcInstanceName DFTTmpl
-channelsNames C3_T
+channelsNames C2_T
 wfTreeName wf_t
 digiTreeName digi_t
 fillWFtree 1
@@ -27,7 +30,7 @@ pluginType FFTAnalyzer
 srcInstanceName DigiReco
 normalizeInput 0
 makeTemplates Re Im Ampl Phase
-channelsNames C3
+channelsNames C2
 storeTree 0
 </T2F>
 
@@ -36,18 +39,20 @@ storeTree 0
 pluginType DFTTemplate
 srcInstanceName T2F
 outWFSuffix _T
-channelsNames C3
+channelsNames C2
 </DFTTmpl>
 
 #---This values must be tuned manually depending on C5.signalWin:
-#   this beacause DFTTemplate only uses samples between C5.signalWin[0] and C3.signalWin[1],
+#   this beacause DFTTemplate only uses samples between C5.signalWin[0] and C2.signalWin[1],
 #   so the baseline samples and signal samples fall in a different region which are not directly related to
 #   those of the original WF
 <C5_T= C5>
 baselineWin 25 250
 baselineInt 250 500
-signalWin 500 1500 16 pol2
-signalInt 200 600
+signalWin 250 3000 16 pol2
+signalInt 250 3000
+#signalWin 250 2500 16 pol2
+#signalInt 250 2500
 CFD 0.5 10 10
 </C5_T>
 
@@ -143,8 +148,8 @@ for ch WFRecoFFT.channelsNames
 <$ch>
 <templateMaker>
 timeBins 1000 400 525
-eventSelection 'WF_ch==C3 && n_tracks==1 && digi_t.amp_max[$ch]>4500 && digi_t.amp_max[$ch]<5000 && fabs(fitResult[0].x()+5)<4 && fabs(fitResult[0].y()-5)<4'
-expression 'wf.WF_val/digi_t.amp_max[C3_T]:wf.WF_time-(digi_t.time_max[C3_T]-1.17697e-01*sin(digi_t.time_max[C3_T]-int(digi_t.time_max[C3_T]/6.238)*6.238*1.003)-2.447+0.0096*sin(2.885*digi_t.time_max[C3_T]-int(digi_t.time_max[C3_T]/6.238)*6.238+2.925))'
+eventSelection 'trg == PHYS && WF_ch==C2 && digi_t.amp_max[$ch]>1500 && digi_t.amp_max[$ch]<3000' # && fabs(X)<4 && fabs(Y)<4'
+expression 'wf.WF_val/digi_t.amp_max[C2_T]:wf.WF_time-(digi_t.time_max[C2_T]-1.17697e-01*sin(digi_t.time_max[C2_T]-int(digi_t.time_max[C2_T]/6.238)*6.238*1.003)-2.447+0.0096*sin(2.885*digi_t.time_max[C2_T]-int(digi_t.time_max[C2_T]/6.238)*6.238+2.925))'
 </templateMaker>
 </$ch>
 end
