--- a/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base.cfg
+++ b/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base.cfg
@@ -1,7 +1,7 @@
 <h4reco>
-outNameSuffix /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Oct2021/ntuples_c2escan_v3/
+outNameSuffix /eos/user/c/cbasile/ECAL_TB2021/ntuples/ 
 path2data /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Oct2021/DataTree/
-pluginList TrgFilter H4Hodo DigiReco WFReco 
+pluginList TrgFilter H4Hodo DigiReco WFReco TrackFit 
 run 14918
 maxEvents -1
 maxFiles -1
@@ -83,10 +83,10 @@ LED 100 1 3
 fOversampling 8
 #---Maximum frequency used in the linear interpolation to extract dt from the FFT phase spectrum (GHz)
 maxPhaseFitFreq 0.04
-<templateFit>  
-file /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Oct2021/ntuples_templates_v8/15153/templ/corrected_template.root tmpl_corr_smooth
-fitWin 0. 4 5
-</templateFit>
+#<templateFit>  
+#file /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Oct2021/ntuples_templates_v8/15153/templ/corrected_template.root tmpl_corr_smooth
+#fitWin 0. 4 5
+#</templateFit>
 
 </C5>
 
