--- a/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_templates.cfg
+++ b/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_templates.cfg
@@ -1,6 +1,7 @@
 importCfg cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base.cfg
 h4reco.run 15153
 h4reco.outNameSuffix /eos/user/c/cbasile/ECAL_TB2021/ntuples_templates/ 
+path2data /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Oct2021/DataTree/
 #/eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Oct2021/ntuples_templates_v10/
 h4reco.pluginList+= T2F DFTTmpl WFRecoFFT TmplMaker
 h4reco.maxFiles -1
