--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ AutoDict_*
 
 # Other temp files
 *.txt
+*.out
+*.err
 *.log
 *.png
 *.pdf
@@ -21,6 +23,7 @@ AutoDict_*
 *.tmp
 *.o
 *.so
+*.tar
 
 # Python cache
 *__pycache__/*
