--- a/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base_100GeV.cfg
+++ b/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base_100GeV.cfg
@@ -83,10 +83,6 @@ LED 100 1 3
 fOversampling 8
 #---Maximum frequency used in the linear interpolation to extract dt from the FFT phase spectrum (GHz)
 maxPhaseFitFreq 0.04
-#<templateFit>  
-#file /eos/user/c/cbasile/ECAL_TB2021/ntuples_templates/ntuples_v1/15153/templ/corrected_template.root  tmpl_corr_smooth
-#fitWin 0. 4 5
-#</templateFit>
 
 </C5>
 
@@ -100,6 +96,10 @@ digiChannel 2
 
 <C2= C5>
 digiChannel 3
+<templateFit>  
+file /eos/user/c/cbasile/ECAL_TB2021/ntuples_templates/ntuples_v1/15153/templ/corrected_template.root  tmpl_corr_smooth
+fitWin 0. 4 5
+</templateFit>
 </C2>
 
 <C1= C5>
