Amp threshold set to 0.1

--- a/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base_25GeV.cfg
+++ b/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base_25GeV.cfg
@@ -5,7 +5,7 @@ for ch VFEs
 <$ch>
 <templateFit>
 file /eos/user/c/cbasile/ECAL_TB2021/ntuples_templates/ntuples_v1/15183/templ/corrected_template.root tmpl_corr_smooth
-fitWin 0. 4 5
+fitWin 0.1 4 5
 </templateFit>
 </$ch>
 end
