--- a/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base_100GeV.cfg
+++ b/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base_100GeV.cfg
@@ -2,8 +2,8 @@
 outNameSuffix /eos/user/c/cbasile/ECAL_TB2021/ntuples/ 
 path2data /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Oct2021/DataTree/
 pluginList TrgFilter H4Hodo DigiReco WFReco TrackFit 
-run 14918
-maxEvents -1
+run 15153 
+maxEvents -1 
 maxFiles -1
 </h4reco>
 
@@ -97,8 +97,8 @@ digiChannel 2
 <C2= C5>
 digiChannel 3
 <templateFit>  
-file /eos/user/c/cbasile/ECAL_TB2021/ntuples_templates/ntuples_v1/15153/templ/corrected_template.root  tmpl_corr_smooth
-fitWin 0. 4 5
+file /eos/user/c/cbasile/ECAL_TB2021/ntuples_templates/ntuples_v2/15153/templ/corrected_template.root  tmpl_corr_smooth
+fitWin 0.1 4 5
 </templateFit>
 </C2>
 
