--- a/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base_125GeV.cfg
+++ b/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base_125GeV.cfg
@@ -4,8 +4,8 @@ h4reco.run 15190
 for ch VFEs
 <$ch>
 <templateFit>
-file /eos/user/c/cbasile/ECAL_TB2021/ntuples_templates/ntuples_v1/15190/templ/corrected_template.root tmpl_corr_smooth
-fitWin 0.1 4 5
+file /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Oct2021/LowPurity/templates/ntuples_v1/15190/templ/corrected_template.root tmpl_corr_smooth 
+fitWin 0. 4 5
 </templateFit>
 </$ch>
 end
