--- a/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base.cfg
+++ b/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base.cfg
@@ -56,6 +56,7 @@ channelsNames+= V1742
 #---WF reconstruction for VFEs
 <WFReco>
 pluginType WFAnalyzer
+trgInstanceName TrgFilter
 srcInstanceName DigiReco
 channelsNames= DigiReco.channelsNames 
 timeRecoTypes CFD LED
@@ -66,7 +67,7 @@ WFtreePrescale 1
 
 #---Channels
 <C5>
-type LiTEDTU 
+type LiTeDTU 
 digiBoard 20
 digiGroup 0
 digiChannel 0
@@ -231,7 +232,7 @@ signalWin 130 900 7 pol2
 clkPeriod 6.238
 <templateFit>  
 file data/digitizer_template.root tmpl_CLK_smooth
-fitWin 0. 5 30
+fitWin 0. 3 10
 </templateFit>
 </CLK>
 
