--- a/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base_HP.cfg
+++ b/cfg/ECAL_H4_Oct2021/ECAL_H4_Phase2_base_HP.cfg
@@ -57,16 +57,17 @@ channelsNames+= V1742
 <WFReco>
 pluginType WFAnalyzer
 srcInstanceName DigiReco
+trgInstanceName TrgFilter
 channelsNames= DigiReco.channelsNames 
 timeRecoTypes CFD LED
 
 fillWFtree 1
-WFtreePrescale 1
+WFtreePrescale 100
 </WFReco>
 
 #---Channels
 <C5>
-type LiTEDTU 
+type LiTeDTU 
 digiBoard 20
 digiGroup 0
 digiChannel 0
@@ -231,7 +232,7 @@ signalWin 130 900 7 pol2
 clkPeriod 6.238
 <templateFit>  
 file data/digitizer_template.root tmpl_CLK_smooth
-fitWin 0. 5 30
+fitWin 0. 5 30 
 </templateFit>
 </CLK>
 
