--- a/cfg/ECAL_H4_July2023/ECAL_H4_Phase2_5x5.cfg
+++ b/cfg/ECAL_H4_July2023/ECAL_H4_Phase2_5x5.cfg
@@ -7,11 +7,11 @@ maxEvents -1
 maxFiles -1
 </h4reco>
 
-VFEs A1 A2 A3 A4 A5 \
-     B1 B2 B3 B4 B5 \
-     C1 C2 C3 C4 C5 \
-     D1 D2 D3 D4 D5 \
-     E1 E2 E3 E4 E5 
+VFEs #matrixA1# #matrixA2# #matrixA3# #matrixA4# #matrixA5# #endA#
+     #matrixB1# #matrixB2# #matrixB3# #matrixB4# #matrixB5# #endB#
+     #matrixC1# #matrixC2# #matrixC3# #matrixC4# #matrixC5# #endC#
+     #matrixD1# #matrixD2# #matrixD3# #matrixD4# #matrixD5# #endD#
+     #matrixE1# #matrixE2# #matrixE3# #matrixE4# #matrixE5# 
 
 V1742 MCP1 MCP2 CLK
 
@@ -68,9 +68,9 @@ WFtreePrescale 100
 #---Channels
 <C3>
 type LiTeDTU 
-digiBoard 20
-digiGroup 0
-digiChannel 0
+digiBoard ##digiboardC3##
+digiGroup ##digiGroupC3##
+digiChannel ##digiChannelC3##
 polarity 1
 nSamples 130
 tUnit    6.25
@@ -92,129 +92,129 @@ maxPhaseFitFreq 0.04
 </C3>
 
 
-<C4= C3>
-digiboard ##digiboardC4##
-digiChannel ##digiChannelC4##
-</C4>
+#ValidC4#<C4= C3>
+#ValidC4#digiboard ##digiboardC4##
+#ValidC4#digiChannel ##digiChannelC4##
+#ValidC4#</C4>
 
-<C2= C3>
-digiboard ##digiboardC2##
-digiChannel ##digiChannelC2##
-</C2>
+#ValidC2#<C2= C3>
+#ValidC2#digiboard ##digiboardC2##
+#ValidC2#digiChannel ##digiChannelC2##
+#ValidC2#</C2>
 
-<C1= C3>
-digiboard ##digiboardC1##
-digiChannel ##digiChannelC1##
-</C1>
+#ValidC1#<C1= C3>
+#ValidC1#digiboard ##digiboardC1##
+#ValidC1#digiChannel ##digiChannelC1##
+#ValidC1#</C1>
 
-<C5= C3>
-digiboard ##digiboardC5##
-digiChannel ##digiChannelC5##
-</C5>
-
-
-<B4= C3>
-digiboard ##digiboardB4##
-digiChannel ##digiChannelB4##
-</B4>
-
-<B2= C3>
-digiboard ##digiboardB2##
-digiChannel ##digiChannelB2##
-</B2>
-
-<B1= C3>
-digiboard ##digiboardB1##
-digiChannel ##digiChannelB1##
-</B1>
-
-<B5= C3>
-digiboard ##digiboardB5##
-digiChannel ##digiChannelB5##
-</B5>
-
-<B3= C3>
-digiboard ##digiboardB3##
-digiChannel ##digiChannelB3##
-</B3>
+#ValidC5#<C5= C3>
+#ValidC5#digiboard ##digiboardC5##
+#ValidC5#digiChannel ##digiChannelC5##
+#ValidC5#</C5>
 
 
-<E4= C3>
-digiboard ##digiboardE4##
-digiChannel ##digiChannelE4##
-</E4>
+#ValidB4#<B4= C3>
+#ValidB4#digiboard ##digiboardB4##
+#ValidB4#digiChannel ##digiChannelB4##
+#ValidB4#</B4>
 
-<E2= C3>
-digiboard ##digiboardE2##
-digiChannel ##digiChannelE2##
-</E2>
+#ValidB2#<B2= C3>
+#ValidB2#digiboard ##digiboardB2##
+#ValidB2#digiChannel ##digiChannelB2##
+#ValidB2#</B2>
 
-<E1= C3>
-digiboard ##digiboardE1##
-digiChannel ##digiChannelE1##
-</E1>
+#ValidB1#<B1= C3>
+#ValidB1#digiboard ##digiboardB1##
+#ValidB1#digiChannel ##digiChannelB1##
+#ValidB1#</B1>
 
-<E5= C3>
-digiboard ##digiboardE5##
-digiChannel ##digiChannelE5##
-</E5>
+#ValidB5#<B5= C3>
+#ValidB5#digiboard ##digiboardB5##
+#ValidB5#digiChannel ##digiChannelB5##
+#ValidB5#</B5>
 
-<E3= C3>
-digiboard ##digiboardE3##
-digiChannel ##digiChannelE3##
-</E3>
-
-
-<A4= C3>
-digiboard ##digiboardA4##
-digiChannel ##digiChannelA4##
-</A4>
-
-<A2= C3>
-digiboard ##digiboardA2##
-digiChannel ##digiChannelA2##
-</A2>
-
-<A1= C3>
-digiboard ##digiboardA1##
-digiChannel ##digiChannelA1##
-</A1>
-
-<A5= C3>
-digiboard ##digiboardA5##
-digiChannel ##digiChannelA5##
-</A5>
-
-<A3= C3>
-digiboard ##digiboardA3##
-digiChannel ##digiChannelA3##
-</A3>
+#ValidB3#<B3= C3>
+#ValidB3#digiboard ##digiboardB3##
+#ValidB3#digiChannel ##digiChannelB3##
+#ValidB3#</B3>
 
 
-<D4= C3>
-digiboard ##digiboardD4##
-digiChannel ##digiChannelD4##
-</D4>
+#ValidE4#<E4= C3>
+#ValidE4#digiboard ##digiboardE4##
+#ValidE4#digiChannel ##digiChannelE4##
+#ValidE4#</E4>
 
-<D2= C3>
-digiboard ##digiboardD2##
-digiChannel ##digiChannelD2##
-</D2>
+#ValidE2#<E2= C3>
+#ValidE2#digiboard ##digiboardE2##
+#ValidE2#digiChannel ##digiChannelE2##
+#ValidE2#</E2>
 
-<D1= C3>
-digiboard ##digiboardD1##
-digiChannel ##digiChannelD1##
-</D1>
+#ValidE1#<E1= C3>
+#ValidE1#digiboard ##digiboardE1##
+#ValidE1#digiChannel ##digiChannelE1##
+#ValidE1#</E1>
 
-<D5= C3>
-digiboard ##digiboardD5##
-digiChannel ##digiChannelD5##
-</D5>
+#ValidE5#<E5= C3>
+#ValidE5#digiboard ##digiboardE5##
+#ValidE5#digiChannel ##digiChannelE5##
+#ValidE5#</E5>
 
-<D3= C3>
-digiboard ##digiboardD3##
-digiChannel ##digiChannelD3##
-</D3>
+#ValidE3#<E3= C3>
+#ValidE3#digiboard ##digiboardE3##
+#ValidE3#digiChannel ##digiChannelE3##
+#ValidE3#</E3>
+
+
+#ValidA4#<A4= C3>
+#ValidA4#digiboard ##digiboardA4##
+#ValidA4#digiChannel ##digiChannelA4##
+#ValidA4#</A4>
+
+#ValidA2#<A2= C3>
+#ValidA2#digiboard ##digiboardA2##
+#ValidA2#digiChannel ##digiChannelA2##
+#ValidA2#</A2>
+
+#ValidA1#<A1= C3>
+#ValidA1#digiboard ##digiboardA1##
+#ValidA1#digiChannel ##digiChannelA1##
+#ValidA1#</A1>
+
+#ValidA5#<A5= C3>
+#ValidA5#digiboard ##digiboardA5##
+#ValidA5#digiChannel ##digiChannelA5##
+#ValidA5#</A5>
+
+#ValidA3#<A3= C3>
+#ValidA3#digiboard ##digiboardA3##
+#ValidA3#digiChannel ##digiChannelA3##
+#ValidA3#</A3>
+
+
+#ValidD4#<D4= C3>
+#ValidD4#digiboard ##digiboardD4##
+#ValidD4#digiChannel ##digiChannelD4##
+#ValidD4#</D4>
+
+#ValidD2#<D2= C3>
+#ValidD2#digiboard ##digiboardD2##
+#ValidD2#digiChannel ##digiChannelD2##
+#ValidD2#</D2>
+
+#ValidD1#<D1= C3>
+#ValidD1#digiboard ##digiboardD1##
+#ValidD1#digiChannel ##digiChannelD1##
+#ValidD1#</D1>
+
+#ValidD5#<D5= C3>
+#ValidD5#digiboard ##digiboardD5##
+#ValidD5#digiChannel ##digiChannelD5##
+#ValidD5#</D5>
+
+#ValidD3#<D3= C3>
+#ValidD3#digiboard ##digiboardD3##
+#ValidD3#digiChannel ##digiChannelD3##
+#ValidD3#</D3>
 
 #---CAEN V1742 (digitizer) active channels
 <MCP1>
