modifing to have digiGroup instead of digiBoard

--- a/cfg/ECAL_H4_July2023/ECAL_H4_Phase2_3x3.cfg
+++ b/cfg/ECAL_H4_July2023/ECAL_H4_Phase2_3x3.cfg
@@ -9,7 +9,7 @@ maxFiles -1
 
 VFEs #matrixA1# #matrixA2# #matrixA3# #endA#
      #matrixB1# #matrixB2# #matrixB3# #endB#
-     #matrixC1# #matrixC2# #matrixC3# #endC#
+     #matrixC1# #matrixC2# #matrixC3# 
 
 V1742 MCP1 MCP2 CLK
 
@@ -66,7 +66,7 @@ WFtreePrescale 100
 #---Channels
 <C3>
 type LiTeDTU 
-digiBoard ##digiboardC3##
+digiBoard ##digiGroupC3##
 digiGroup ##digiGroupC3##
 digiChannel ##digiChannelC3##
 polarity 1
@@ -92,12 +92,12 @@ maxPhaseFitFreq 0.04
 
 
 #ValidC2#<C2= C3>
-#ValidC2#digiboard ##digiboardC2##
+#ValidC2#digiGroup ##digiGroupC2##
 #ValidC2#digiChannel ##digiChannelC2##
 #ValidC2#</C2>
 
 #ValidC1#<C1= C3>
-#ValidC1#digiboard ##digiboardC1##
+#ValidC1#digiGroup ##digiGroupC1##
 #ValidC1#digiChannel ##digiChannelC1##
 #ValidC1#</C1>
 
@@ -105,33 +105,33 @@ maxPhaseFitFreq 0.04
 
 
 #ValidB2#<B2= C3>
-#ValidB2#digiboard ##digiboardB2##
+#ValidB2#digiGroup ##digiGroupB2##
 #ValidB2#digiChannel ##digiChannelB2##
 #ValidB2#</B2>
 
 #ValidB1#<B1= C3>
-#ValidB1#digiboard ##digiboardB1##
+#ValidB1#digiGroup ##digiGroupB1##
 #ValidB1#digiChannel ##digiChannelB1##
 #ValidB1#</B1>
 
 #ValidB3#<B3= C3>
-#ValidB3#digiboard ##digiboardB3##
+#ValidB3#digiGroup ##digiGroupB3##
 #ValidB3#digiChannel ##digiChannelB3##
 #ValidB3#</B3>
 
 
 #ValidA2#<A2= C3>
-#ValidA2#digiboard ##digiboardA2##
+#ValidA2#digiGroup ##digiGroupA2##
 #ValidA2#digiChannel ##digiChannelA2##
 #ValidA2#</A2>
 
 #ValidA1#<A1= C3>
-#ValidA1#digiboard ##digiboardA1##
+#ValidA1#digiGroup ##digiGroupA1##
 #ValidA1#digiChannel ##digiChannelA1##
 #ValidA1#</A1>
 
 #ValidA3#<A3= C3>
-#ValidA3#digiboard ##digiboardA3##
+#ValidA3#digiGroup ##digiGroupA3##
 #ValidA3#digiChannel ##digiChannelA3##
 #ValidA3#</A3>
 
