--- a/cfg/ECAL_H4_July2023/ECAL_H4_Phase2_5x5.cfg
+++ b/cfg/ECAL_H4_July2023/ECAL_H4_Phase2_5x5.cfg
@@ -68,7 +68,7 @@ WFtreePrescale 100
 #---Channels
 <C3>
 type LiTeDTU 
-digiBoard ##digiboardC3##
+digiBoard 2
 digiGroup ##digiGroupC3##
 digiChannel ##digiChannelC3##
 polarity 1
@@ -93,126 +93,126 @@ maxPhaseFitFreq 0.04
 
 
 #ValidC4#<C4= C3>
-#ValidC4#digiboard ##digiboardC4##
+#ValidC4#digiGroup ##digiGroupC4##
 #ValidC4#digiChannel ##digiChannelC4##
 #ValidC4#</C4>
 
 #ValidC2#<C2= C3>
-#ValidC2#digiboard ##digiboardC2##
+#ValidC2#digiGroup ##digiGroupC2##
 #ValidC2#digiChannel ##digiChannelC2##
 #ValidC2#</C2>
 
 #ValidC1#<C1= C3>
-#ValidC1#digiboard ##digiboardC1##
+#ValidC1#digiGroup ##digiGroupC1##
 #ValidC1#digiChannel ##digiChannelC1##
 #ValidC1#</C1>
 
 #ValidC5#<C5= C3>
-#ValidC5#digiboard ##digiboardC5##
+#ValidC5#digiGroup ##digiGroupC5##
 #ValidC5#digiChannel ##digiChannelC5##
 #ValidC5#</C5>
 
 
 #ValidB4#<B4= C3>
-#ValidB4#digiboard ##digiboardB4##
+#ValidB4#digiGroup ##digiGroupB4##
 #ValidB4#digiChannel ##digiChannelB4##
 #ValidB4#</B4>
 
 #ValidB2#<B2= C3>
-#ValidB2#digiboard ##digiboardB2##
+#ValidB2#digiGroup ##digiGroupB2##
 #ValidB2#digiChannel ##digiChannelB2##
 #ValidB2#</B2>
 
 #ValidB1#<B1= C3>
-#ValidB1#digiboard ##digiboardB1##
+#ValidB1#digiGroup ##digiGroupB1##
 #ValidB1#digiChannel ##digiChannelB1##
 #ValidB1#</B1>
 
 #ValidB5#<B5= C3>
-#ValidB5#digiboard ##digiboardB5##
+#ValidB5#digiGroup ##digiGroupB5##
 #ValidB5#digiChannel ##digiChannelB5##
 #ValidB5#</B5>
 
 #ValidB3#<B3= C3>
-#ValidB3#digiboard ##digiboardB3##
+#ValidB3#digiGroup ##digiGroupB3##
 #ValidB3#digiChannel ##digiChannelB3##
 #ValidB3#</B3>
 
 
 #ValidE4#<E4= C3>
-#ValidE4#digiboard ##digiboardE4##
+#ValidE4#digiGroup ##digiGroupE4##
 #ValidE4#digiChannel ##digiChannelE4##
 #ValidE4#</E4>
 
 #ValidE2#<E2= C3>
-#ValidE2#digiboard ##digiboardE2##
+#ValidE2#digiGroup ##digiGroupE2##
 #ValidE2#digiChannel ##digiChannelE2##
 #ValidE2#</E2>
 
 #ValidE1#<E1= C3>
-#ValidE1#digiboard ##digiboardE1##
+#ValidE1#digiGroup ##digiGroupE1##
 #ValidE1#digiChannel ##digiChannelE1##
 #ValidE1#</E1>
 
 #ValidE5#<E5= C3>
-#ValidE5#digiboard ##digiboardE5##
+#ValidE5#digiGroup ##digiGroupE5##
 #ValidE5#digiChannel ##digiChannelE5##
 #ValidE5#</E5>
 
 #ValidE3#<E3= C3>
-#ValidE3#digiboard ##digiboardE3##
+#ValidE3#digiGroup ##digiGroupE3##
 #ValidE3#digiChannel ##digiChannelE3##
 #ValidE3#</E3>
 
 
 #ValidA4#<A4= C3>
-#ValidA4#digiboard ##digiboardA4##
+#ValidA4#digiGroup ##digiGroupA4##
 #ValidA4#digiChannel ##digiChannelA4##
 #ValidA4#</A4>
 
 #ValidA2#<A2= C3>
-#ValidA2#digiboard ##digiboardA2##
+#ValidA2#digiGroup ##digiGroupA2##
 #ValidA2#digiChannel ##digiChannelA2##
 #ValidA2#</A2>
 
 #ValidA1#<A1= C3>
-#ValidA1#digiboard ##digiboardA1##
+#ValidA1#digiGroup ##digiGroupA1##
 #ValidA1#digiChannel ##digiChannelA1##
 #ValidA1#</A1>
 
 #ValidA5#<A5= C3>
-#ValidA5#digiboard ##digiboardA5##
+#ValidA5#digiGroup ##digiGroupA5##
 #ValidA5#digiChannel ##digiChannelA5##
 #ValidA5#</A5>
 
 #ValidA3#<A3= C3>
-#ValidA3#digiboard ##digiboardA3##
+#ValidA3#digiGroup ##digiGroupA3##
 #ValidA3#digiChannel ##digiChannelA3##
 #ValidA3#</A3>
 
 
 #ValidD4#<D4= C3>
-#ValidD4#digiboard ##digiboardD4##
+#ValidD4#digiGroup ##digiGroupD4##
 #ValidD4#digiChannel ##digiChannelD4##
 #ValidD4#</D4>
 
 #ValidD2#<D2= C3>
-#ValidD2#digiboard ##digiboardD2##
+#ValidD2#digiGroup ##digiGroupD2##
 #ValidD2#digiChannel ##digiChannelD2##
 #ValidD2#</D2>
 
 #ValidD1#<D1= C3>
-#ValidD1#digiboard ##digiboardD1##
+#ValidD1#digiGroup ##digiGroupD1##
 #ValidD1#digiChannel ##digiChannelD1##
 #ValidD1#</D1>
 
 #ValidD5#<D5= C3>
-#ValidD5#digiboard ##digiboardD5##
+#ValidD5#digiGroup ##digiGroupD5##
 #ValidD5#digiChannel ##digiChannelD5##
 #ValidD5#</D5>
 
 #ValidD3#<D3= C3>
-#ValidD3#digiboard ##digiboardD3##
+#ValidD3#digiGroup ##digiGroupD3##
 #ValidD3#digiChannel ##digiChannelD3##
 #ValidD3#</D3>
 
