--- a/cfg/ECAL_H4_July2023/ECAL_H4_Phase2_7x7.cfg
+++ b/cfg/ECAL_H4_July2023/ECAL_H4_Phase2_7x7.cfg
@@ -71,7 +71,7 @@ WFtreePrescale 100
 #---Channels
 <C3>
 type LiTeDTU 
-digiBoard ##digiboardC3##
+digiBoard 2
 digiGroup ##digiGroupC3##
 digiChannel ##digiChannelC3##
 polarity 1
@@ -96,254 +96,254 @@ maxPhaseFitFreq 0.04
 
 
 #ValidC4#<C4= C3>
-#ValidC4#digiboard ##digiboardC4##
+#ValidC4#digiGroup ##digiGroupC4##
 #ValidC4#digiChannel ##digiChannelC4##
 #ValidC4#</C4>
 
 #ValidC2#<C2= C3>
-#ValidC2#digiboard ##digiboardC2##
+#ValidC2#digiGroup ##digiGroupC2##
 #ValidC2#digiChannel ##digiChannelC2##
 #ValidC2#</C2>
 
 #ValidC1#<C1= C3>
-#ValidC1#digiboard ##digiboardC1##
+#ValidC1#digiGroup ##digiGroupC1##
 #ValidC1#digiChannel ##digiChannelC1##
 #ValidC1#</C1>
 
 #ValidC5#<C5= C3>
-#ValidC5#digiboard ##digiboardC5##
+#ValidC5#digiGroup ##digiGroupC5##
 #ValidC5#digiChannel ##digiChannelC5##
 #ValidC5#</C5>
 
 #ValidC7#<C7= C3>
-#ValidC7#digiboard ##digiboardC7##
+#ValidC7#digiGroup ##digiGroupC7##
 #ValidC7#digiChannel ##digiChannelC7##
 #ValidC7#</C7>
 
 #ValidC6#<C6= C3>
-#ValidC6#digiboard ##digiboardC6##
+#ValidC6#digiGroup ##digiGroupC6##
 #ValidC6#digiChannel ##digiChannelC6##
 #ValidC6#</C6>
 
 
 #ValidA1#<A1= C3>
-#ValidA1#digiboard ##digiboardA1##
+#ValidA1#digiGroup ##digiGroupA1##
 #ValidA1#digiChannel ##digiChannelA1##
 #ValidA1#</A1>
 
 #ValidA2#<A2= C3>
-#ValidA2#digiboard ##digiboardA2##
+#ValidA2#digiGroup ##digiGroupA2##
 #ValidA2#digiChannel ##digiChannelA2##
 #ValidA2#</A2>
 
 #ValidA3#<A3= C3>
-#ValidA3#digiboard ##digiboardA3##
+#ValidA3#digiGroup ##digiGroupA3##
 #ValidA3#digiChannel ##digiChannelA3##
 #ValidA3#</A3>
 
 #ValidA4#<A4= C3>
-#ValidA4#digiboard ##digiboardA4##
+#ValidA4#digiGroup ##digiGroupA4##
 #ValidA4#digiChannel ##digiChannelA4##
 #ValidA4#</A4>
 
 
 #ValidA5#<A5= C3>
-#ValidA5#digiboard ##digiboardA5##
+#ValidA5#digiGroup ##digiGroupA5##
 #ValidA5#digiChannel ##digiChannelA5##
 #ValidA5#</A5>
 
 #ValidA6#<A6= C3>
-#ValidA6#digiboard ##digiboardA6##
+#ValidA6#digiGroup ##digiGroupA6##
 #ValidA6#digiChannel ##digiChannelA6##
 #ValidA6#</A6>
 
 #ValidA7#<A7= C3>
-#ValidA7#digiboard ##digiboardA7##
+#ValidA7#digiGroup ##digiGroupA7##
 #ValidA7#digiChannel ##digiChannelA7##
 #ValidA7#</A7>
 
 
 #ValidB1#<B1= C3>
-#ValidB1#digiboard ##digiboardB1##
+#ValidB1#digiGroup ##digiGroupB1##
 #ValidB1#digiChannel ##digiChannelB1##
 #ValidB1#</B1>
 
 #ValidB2#<B2= C3>
-#ValidB2#digiboard ##digiboardB2##
+#ValidB2#digiGroup ##digiGroupB2##
 #ValidB2#digiChannel ##digiChannelB2##
 #ValidB2#</B2>
 
 #ValidB3#<B3= C3>
-#ValidB3#digiboard ##digiboardB3##
+#ValidB3#digiGroup ##digiGroupB3##
 #ValidB3#digiChannel ##digiChannelB3##
 #ValidB3#</B3>
 
 #ValidB4#<B4= C3>
-#ValidB4#digiboard ##digiboardB4##
+#ValidB4#digiGroup ##digiGroupB4##
 #ValidB4#digiChannel ##digiChannelB4##
 #ValidB4#</B4>
 
 
 #ValidB5#<B5= C3>
-#ValidB5#digiboard ##digiboardB5##
+#ValidB5#digiGroup ##digiGroupB5##
 #ValidB5#digiChannel ##digiChannelB5##
 #ValidB5#</B5>
 
 #ValidB6#<B6= C3>
-#ValidB6#digiboard ##digiboardB6##
+#ValidB6#digiGroup ##digiGroupB6##
 #ValidB6#digiChannel ##digiChannelB6##
 #ValidB6#</B6>
 
 #ValidB7#<B7= C3>
-#ValidB7#digiboard ##digiboardB7##
+#ValidB7#digiGroup ##digiGroupB7##
 #ValidB7#digiChannel ##digiChannelB7##
 #ValidB7#</B7>
 
 
 #ValidD1#<D1= C3>
-#ValidD1#digiboard ##digiboardD1##
+#ValidD1#digiGroup ##digiGroupD1##
 #ValidD1#digiChannel ##digiChannelD1##
 #ValidD1#</D1>
 
 #ValidD2#<D2= C3>
-#ValidD2#digiboard ##digiboardD2##
+#ValidD2#digiGroup ##digiGroupD2##
 #ValidD2#digiChannel ##digiChannelD2##
 #ValidD2#</D2>
 
 #ValidD3#<D3= C3>
-#ValidD3#digiboard ##digiboardD3##
+#ValidD3#digiGroup ##digiGroupD3##
 #ValidD3#digiChannel ##digiChannelD3##
 #ValidD3#</D3>
 
 #ValidD4#<D4= C3>
-#ValidD4#digiboard ##digiboardD4##
+#ValidD4#digiGroup ##digiGroupD4##
 #ValidD4#digiChannel ##digiChannelD4##
 #ValidD4#</D4>
 
 
 #ValidD5#<D5= C3>
-#ValidD5#digiboard ##digiboardD5##
+#ValidD5#digiGroup ##digiGroupD5##
 #ValidD5#digiChannel ##digiChannelD5##
 #ValidD5#</D5>
 
 #ValidD6#<D6= C3>
-#ValidD6#digiboard ##digiboardD6##
+#ValidD6#digiGroup ##digiGroupD6##
 #ValidD6#digiChannel ##digiChannelD6##
 #ValidD6#</D6>
 
 #ValidD7#<D7= C3>
-#ValidD7#digiboard ##digiboardD7##
+#ValidD7#digiGroup ##digiGroupD7##
 #ValidD7#digiChannel ##digiChannelD7##
 #ValidD7#</D7>
 
 
 #ValidE1#<E1= C3>
-#ValidE1#digiboard ##digiboardE1##
+#ValidE1#digiGroup ##digiGroupE1##
 #ValidE1#digiChannel ##digiChannelE1##
 #ValidE1#</E1>
 
 #ValidE2#<E2= C3>
-#ValidE2#digiboard ##digiboardE2##
+#ValidE2#digiGroup ##digiGroupE2##
 #ValidE2#digiChannel ##digiChannelE2##
 #ValidE2#</E2>
 
 #ValidE3#<E3= C3>
-#ValidE3#digiboard ##digiboardE3##
+#ValidE3#digiGroup ##digiGroupE3##
 #ValidE3#digiChannel ##digiChannelE3##
 #ValidE3#</E3>
 
 #ValidE4#<E4= C3>
-#ValidE4#digiboard ##digiboardE4##
+#ValidE4#digiGroup ##digiGroupE4##
 #ValidE4#digiChannel ##digiChannelE4##
 #ValidE4#</E4>
 
 #ValidE5#<E5= C3>
-#ValidE5#digiboard ##digiboardE5##
+#ValidE5#digiGroup ##digiGroupE5##
 #ValidE5#digiChannel ##digiChannelE5##
 #ValidE5#</E5>
 
 #ValidE6#<E6= C3>
-#ValidE6#digiboard ##digiboardE6##
+#ValidE6#digiGroup ##digiGroupE6##
 #ValidE6#digiChannel ##digiChannelE6##
 #ValidE6#</E6>
 
 #ValidE7#<E7= C3>
-#ValidE7#digiboard ##digiboardE7##
+#ValidE7#digiGroup ##digiGroupE7##
 #ValidE7#digiChannel ##digiChannelE7##
 #ValidE7#</E7>
 
 
 #ValidF1#<F1= C3>
-#ValidF1#digiboard ##digiboardF1##
+#ValidF1#digiGroup ##digiGroupF1##
 #ValidF1#digiChannel ##digiChannelF1##
 #ValidF1#</F1>
 
 #ValidF2#<F2= C3>
-#ValidF2#digiboard ##digiboardF2##
+#ValidF2#digiGroup ##digiGroupF2##
 #ValidF2#digiChannel ##digiChannelF2##
 #ValidF2#</F2>
 
 #ValidF3#<F3= C3>
-#ValidF3#digiboard ##digiboardF3##
+#ValidF3#digiGroup ##digiGroupF3##
 #ValidF3#digiChannel ##digiChannelF3##
 #ValidF3#</F3>
 
 #ValidF4#<F4= C3>
-#ValidF4#digiboard ##digiboardF4##
+#ValidF4#digiGroup ##digiGroupF4##
 #ValidF4#digiChannel ##digiChannelF4##
 #ValidF4#</F4>
 
 
 #ValidF5#<F5= C3>
-#ValidF5#digiboard ##digiboardF5##
+#ValidF5#digiGroup ##digiGroupF5##
 #ValidF5#digiChannel ##digiChannelF5##
 #ValidF5#</F5>
 
 #ValidF6#<F6= C3>
-#ValidF6#digiboard ##digiboardF6##
+#ValidF6#digiGroup ##digiGroupF6##
 #ValidF6#digiChannel ##digiChannelF6##
 #ValidF6#</F6>
 
 #ValidF7#<F7= C3>
-#ValidF7#digiboard ##digiboardF7##
+#ValidF7#digiGroup ##digiGroupF7##
 #ValidF7#digiChannel ##digiChannelF7##
 #ValidF7#</F7>
 
 
 
 #ValidG1#<G1= C3>
-#ValidG1#digiboard ##digiboardG1##
+#ValidG1#digiGroup ##digiGroupG1##
 #ValidG1#digiChannel ##digiChannelG1##
 #ValidG1#</G1>
 
 #ValidG2#<G2= C3>
-#ValidG2#digiboard ##digiboardG2##
+#ValidG2#digiGroup ##digiGroupG2##
 #ValidG2#digiChannel ##digiChannelG2##
 #ValidG2#</G2>
 
 #ValidG3#<G3= C3>
-#ValidG3#digiboard ##digiboardG3##
+#ValidG3#digiGroup ##digiGroupG3##
 #ValidG3#digiChannel ##digiChannelG3##
 #ValidG3#</G3>
 
 #ValidG4#<G4= C3>
-#ValidG4#digiboard ##digiboardG4##
+#ValidG4#digiGroup ##digiGroupG4##
 #ValidG4#digiChannel ##digiChannelG4##
 #ValidG4#</G4>
 
 
 #ValidG5#<G5= C3>
-#ValidG5#digiboard ##digiboardG5##
+#ValidG5#digiGroup ##digiGroupG5##
 #ValidG5#digiChannel ##digiChannelG5##
 #ValidG5#</G5>
 
 #ValidG6#<G6= C3>
-#ValidG6#digiboard ##digiboardG6##
+#ValidG6#digiGroup ##digiGroupG6##
 #ValidG6#digiChannel ##digiChannelG6##
 #ValidG6#</G6>
 
 #ValidG7#<G7= C3>
-#ValidG7#digiboard ##digiboardG7##
+#ValidG7#digiGroup ##digiGroupG7##
 #ValidG7#digiChannel ##digiChannelG7##
 #ValidG7#</G7>
 
