--- a/cfg/ECAL_H4_July2023/ECAL_H4_Phase2_7x7.cfg
+++ b/cfg/ECAL_H4_July2023/ECAL_H4_Phase2_7x7.cfg
@@ -1,99 +1,34 @@
 <h4reco>
-outNameSuffix /eos/user/c/cbasile/ECAL_TB2021/ntuples_templates_jobs/ 
-path2data /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Oct2021/repack/ 
-pluginList TrgFilter H4Hodo DigiReco WFReco TrackFit 
-run 14918
-maxEvents -1 
+outNameSuffix /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Jul2023/Reco/
+path2data /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Jul2023/DataTree/
+pluginList DigiReco WFReco H4Hodo
+#pluginList H4Hodo 
+run 10467
+maxEvents -1
 maxFiles -1
 </h4reco>
 
-VFEs #matrixA1# #matrixA2# #matrixA3# #matrixA4# #matrixA5# #matrixA6# #matrixA7# #endA# 
+ECAL #matrixA1# #matrixA2# #matrixA3# #matrixA4# #matrixA5# #matrixA6# #matrixA7# #endA# 
      #matrixB1# #matrixB2# #matrixB3# #matrixB4# #matrixB5# #matrixB6# #matrixB7# #endB#
      #matrixC1# #matrixC2# #matrixC3# #matrixC4# #matrixC5# #matrixC6# #matrixC7# #endC#
      #matrixD1# #matrixD2# #matrixD3# #matrixD4# #matrixD5# #matrixD6# #matrixD7# #endD#
      #matrixE1# #matrixE2# #matrixE3# #matrixE4# #matrixE5# #matrixE6# #matrixE7# #endE#
      #matrixF1# #matrixF2# #matrixF3# #matrixF4# #matrixF5# #matrixF6# #matrixF7# #endF#
      #matrixG1# #matrixG2# #matrixG3# #matrixG4# #matrixG5# #matrixG6# #matrixG7#
-     
 
-V1742 MCP1 MCP2 CLK
-
-#---Trigger filter
-<TrgFilter>
-pluginType TriggerTypeFilter
-triggerBoard 67239937
-triggerMasks 256 512 1024
-triggerNames PHYS PED LASER
-filterEvents 0
-</TrgFilter>
-
-#---Track reconstruction
-#HITS H4Hodo.hodo_layer_0 H4Hodo.hodo_layer_1 H4Hodo.hodo_layer_2 H4Hodo.hodo_layer_3
-# HODO with FITPIX
-HITS H4Hodo.hodo_layer_0 H4Hodo.hodo_layer_1 H4Hodo.hodo_layer_2 H4Hodo.hodo_layer_3
-
-<TrackFit>
-pluginType TrackReco
-geometrySource cfg/H4TelescopeLayouts/H4Telescope_ECAL_Oct2018.root H4Telescope_ECAL_Oct2018
-#geometrySource H4Telescope
-hitProducers= HITS
-maxChi2 2000 #building step
-cleaningChi2Cut 200
-</TrackFit>
-
-#---Hodoscope
-<H4Hodo>
-pluginType HodoReco
-storeTree 1
-minClusterSize 2
-maxClusterSize 4
-</H4Hodo>
-
-#---VFE config
-<DigiReco>
-pluginType DigitizerReco
-channelsNames= VFEs
-channelsNames+= V1742
-</DigiReco>
-
-#---WF reconstruction for VFEs
-<WFReco>
-pluginType WFAnalyzer
-srcInstanceName DigiReco
-trgInstanceName TrgFilter
-channelsNames= DigiReco.channelsNames 
-timeRecoTypes CFD LED
-
-fillWFtree 1
-WFtreePrescale 100
-</WFReco>
-
-#---Channels
-<C3>
-type LiTeDTU 
+<CH3>
 digiBoard 2
 digiGroup ##digiGroupC3##
 digiChannel ##digiChannelC3##
 polarity 1
-nSamples 130
+nSamples 40
 tUnit    6.25
 baselineWin 1 10
-baselineInt 15 25
-signalWin 26 120 5 gaus
-signalInt 2 3
+baselineInt 4 9
+signalWin 15 30 8 gaus
+signalInt 18 26
 LED 100 1 3
-#---Template building options
-#---Oversampling frequency (GHz)
-fOversampling 8
-#---Maximum frequency used in the linear interpolation to extract dt from the FFT phase spectrum (GHz)
-maxPhaseFitFreq 0.04
-#<templateFit>  
-#file /eos/user/c/cbasile/ECAL_TB2021/ntuples_templates/ntuples_v1/15153/templ/corrected_template.root  tmpl_corr_smooth
-#fitWin 0. 4 5
-#</templateFit>
-
-</C3>
-
+</CH3>
 
 #ValidC4#<C4= C3>
 #ValidC4#digiGroup ##digiGroupC4##
@@ -347,63 +282,32 @@ maxPhaseFitFreq 0.04
 #ValidG7#digiChannel ##digiChannelG7##
 #ValidG7#</G7>
 
+#---Hodoscope
+<H4Hodo>
+pluginType HodoReco
+storeTree 1
+minClusterSize 2
+maxClusterSize 4
+</H4Hodo>
 
+---VFE config
+<DigiReco>
+pluginType DigitizerReco
+channelsNames= ECAL
+</DigiReco>
 
+---WF reconstruction for VFEs
+<WFReco>
+pluginType WFAnalyzer
+srcInstanceName DigiReco
+channelsNames= DigiReco.channelsNames 
+timeRecoTypes LED
+fillWFtree 0
+WFtreePrescale 100
+</WFReco>
 
-
-
-#---CAEN V1742 (digitizer) active channels
-<MCP1>
-#subtractChannel void
-digiBoard 50397185
-digiGroup 0
-digiChannel 1
-polarity -1
-nSamples 1024
-tUnit 0.2
-baselineWin 1 20
-baselineInt 20 40
-signalWin 40 1000 7 gaus
-signalInt 10 10
-CFD 0.5 5
-<templateFit>  
-#file /eos/home-c/camendol/ECALTB/ECAL_TB_Oct2021/ntuples/ECAL_H4_Oct2021_templates/ntuples_templates_v5//15153/templ/digitizer_template.root tmpl_MCP1_smooth
-file data/digitizer_template.root tmpl_MCP1_smooth
-fitWin 0. 10 30
-</templateFit>
-</MCP1>
-
-<MCP2= MCP1>
-digiChannel 2
-#templateFit.file /eos/home-c/camendol/ECALTB/ECAL_TB_Oct2021/ntuples/ECAL_H4_Oct2021_templates/ntuples_templates_v5//15153/templ/digitizer_template.root tmpl_MCP2_smooth
-templateFit.file data/digitizer_template.root tmpl_MCP2_smooth
-</MCP2>
-
-<CLK= MCP1>
-digiChannel 0
-polarity 1
-type Clock
-CFD
-CLK -1.3 1.3
-LED 0 2 2 200 300
-# baseline window set to 4 periods
-baselineWin 5 126 
-signalWin 130 900 7 pol2
-clkPeriod 6.238
-<templateFit>  
-file data/digitizer_template.root tmpl_CLK_smooth
-fitWin 0. 5 30 
-</templateFit>
-</CLK>
-
-<void= MCP1>
-subtractChannel
-digiChannel 7
-</void>
-
-<TRG= MCP1>
-digiChannel 8
-LED 400 1 3
-templateFit.file
-templateFit.fitWin
-</TRG>
+#<FilterCorruptedEvents>
+#pluginType FormulaFilter
+#expression 'Max$(digiFrequency)==10'
+#filterEvents 1
+#</FilterCorruptedEvents>
