--- a/cfg/ECAL_H4_July2023/ECAL_H4_Phase2_5x5.cfg
+++ b/cfg/ECAL_H4_July2023/ECAL_H4_Phase2_5x5.cfg
@@ -1,8 +1,8 @@
 <h4reco>
 outNameSuffix /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Jul2023/Reco/
 path2data /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Jul2023/DataTree/
-pluginList DigiReco WFReco H4Hodo
-#pluginList H4Hodo 
+pluginList DigiReco H4Hodo
+#pluginList H4Hodo WFReco 
 run 10467
 maxEvents -1
 maxFiles -1
@@ -13,6 +13,11 @@ ECAL #matrixA1# #matrixA2# #matrixA3# #matrixA4# #matrixA5# #endA#
      #matrixC1# #matrixC2# #matrixC3# #matrixC4# #matrixC5# #endC#
      #matrixD1# #matrixD2# #matrixD3# #matrixD4# #matrixD5# #endD#
      #matrixE1# #matrixE2# #matrixE3# #matrixE4# #matrixE5# 
+
+
+
+V1742 MCP1 MCP2
+#CLK
 
 <C3>
 digiBoard 2
@@ -164,6 +169,7 @@ maxClusterSize 4
 <DigiReco>
 pluginType DigitizerReco
 channelsNames= ECAL
+channelsNames+= V1742
 </DigiReco>
 
 ---WF reconstruction for VFEs
@@ -175,6 +181,50 @@ timeRecoTypes LED
 fillWFtree 0
 WFtreePrescale 100
 </WFReco>
+
+
+
+#---CAEN V1742 (digitizer) active channels
+<MCP1>
+#subtractChannel void
+digiBoard 50397185
+digiGroup 0
+digiChannel 1
+polarity -1
+nSamples 1024
+tUnit 0.2
+baselineWin 1 20
+baselineInt 20 40
+signalWin 40 1000 7 gaus
+signalInt 10 10
+CFD 0.5 5
+# <templateFit>  
+# file data/digitizer_templates_H4_Oct2018.root tmpl_MCP1
+# fitWin 0. 10 21
+# </templateFit>
+</MCP1>
+
+<MCP2= MCP1>
+digiChannel 2
+#templateFit.file data/digitizer_templates_H4_Oct2018.root tmpl_MCP2
+</MCP2>
+
+<CLK= MCP1>
+digiChannel 0
+polarity 1
+type Clock
+CFD
+CLK -1.3 1.3
+LED 0 2 2 200 300
+# baseline window set to 4 periods
+baselineWin 5 126
+signalWin 130 900 7 pol2
+# <templateFit>  
+# file data/digitizer_templates_H4_Oct2018.root tmpl_vfe_clk160
+# fitWin 0. 10 21
+# </templateFit>
+</CLK>
+
 
 #<FilterCorruptedEvents>
 #pluginType FormulaFilter
