--- a/cfg/ECAL_H4_July2023/ECAL_H4_Phase2_3x3.cfg
+++ b/cfg/ECAL_H4_July2023/ECAL_H4_Phase2_3x3.cfg
@@ -1,7 +1,8 @@
 <h4reco>
 outNameSuffix /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Jul2023/Reco/
 path2data /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Jul2023/DataTree/
-pluginList DigiReco WFReco H4Hodo
+pluginList DigiReco H4Hodo TrgFilter WFReco
+#pluginList DigiReco WFReco H4Hodo
 #pluginList H4Hodo 
 run 10467
 maxEvents -1
@@ -14,6 +15,14 @@ ECAL #matrixA1# #matrixA2# #matrixA3# #endA#
 V1742 MCP1 MCP2
 #CLK
 
+#---Trigger filter
+<TrgFilter>
+pluginType TriggerTypeFilter
+triggerBoard 302120961
+triggerMasks 256 512 1024
+triggerNames PHYS PED LASER
+filterEvents 0
+</TrgFilter>
 
 <CH3>
 digiBoard 2
@@ -93,9 +102,9 @@ channelsNames+= V1742
 pluginType WFAnalyzer
 srcInstanceName DigiReco
 channelsNames= DigiReco.channelsNames 
-timeRecoTypes LED
+timeRecoTypes PHYS
 fillWFtree 0
-WFtreePrescale 100
+WFtreePrescale 10
 </WFReco>
 
 
@@ -126,21 +135,21 @@ digiChannel 2
 #templateFit.file data/digitizer_templates_H4_Oct2018.root tmpl_MCP2
 </MCP2>
 
-<CLK= MCP1>
-digiChannel 0
-polarity 1
-type Clock
-CFD
-CLK -1.3 1.3
-LED 0 2 2 200 300
-# baseline window set to 4 periods
-baselineWin 5 126
-signalWin 130 900 7 pol2
-# <templateFit>  
-# file data/digitizer_templates_H4_Oct2018.root tmpl_vfe_clk160
-# fitWin 0. 10 21
-# </templateFit>
-</CLK>
+#<CLK= MCP1>
+#digiChannel 0
+#polarity 1
+#type Clock
+#CFD
+#CLK -1.3 1.3
+#LED 0 2 2 200 300
+## baseline window set to 4 periods
+#baselineWin 5 126
+#signalWin 130 900 7 pol2
+## <templateFit>  
+## file data/digitizer_templates_H4_Oct2018.root tmpl_vfe_clk160
+## fitWin 0. 10 21
+## </templateFit>
+#</CLK>
 
 #<FilterCorruptedEvents>
 #pluginType FormulaFilter
