--- a/cfg/ECAL_H4_July2023/ECAL_H4_Phase2_7x7.cfg
+++ b/cfg/ECAL_H4_July2023/ECAL_H4_Phase2_7x7.cfg
@@ -1,7 +1,9 @@
 <h4reco>
 outNameSuffix /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Jul2023/Reco/
 path2data /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Jul2023/DataTree/
-pluginList DigiReco WFReco H4Hodo
+
+pluginList DigiReco H4Hodo TrgFilter WFReco
+#pluginList DigiReco WFReco H4Hodo
 #pluginList H4Hodo 
 run 10467
 maxEvents -1
@@ -15,6 +17,19 @@ ECAL #matrixA1# #matrixA2# #matrixA3# #matrixA4# #matrixA5# #matrixA6# #matrixA7
      #matrixE1# #matrixE2# #matrixE3# #matrixE4# #matrixE5# #matrixE6# #matrixE7# #endE#
      #matrixF1# #matrixF2# #matrixF3# #matrixF4# #matrixF5# #matrixF6# #matrixF7# #endF#
      #matrixG1# #matrixG2# #matrixG3# #matrixG4# #matrixG5# #matrixG6# #matrixG7#
+
+
+
+
+#---Trigger filter
+<TrgFilter>
+pluginType TriggerTypeFilter
+triggerBoard 302120961
+triggerMasks 256 512 1024
+triggerNames PHYS PED LASER
+filterEvents 0
+</TrgFilter>
+
 
 <CH3>
 digiBoard 2
@@ -301,6 +316,7 @@ channelsNames+= V1742
 <WFReco>
 pluginType WFAnalyzer
 srcInstanceName DigiReco
+trgInstanceName TrgFilter
 channelsNames= DigiReco.channelsNames 
 timeRecoTypes LED
 fillWFtree 0
@@ -334,21 +350,21 @@ digiChannel 2
 #templateFit.file data/digitizer_templates_H4_Oct2018.root tmpl_MCP2
 </MCP2>
 
-<CLK= MCP1>
-digiChannel 0
-polarity 1
-type Clock
-CFD
-CLK -1.3 1.3
-LED 0 2 2 200 300
-# baseline window set to 4 periods
-baselineWin 5 126
-signalWin 130 900 7 pol2
-# <templateFit>  
-# file data/digitizer_templates_H4_Oct2018.root tmpl_vfe_clk160
-# fitWin 0. 10 21
-# </templateFit>
-</CLK>
+#<CLK= MCP1>
+#digiChannel 0
+#polarity 1
+#type Clock
+#CFD
+#CLK -1.3 1.3
+#LED 0 2 2 200 300
+## baseline window set to 4 periods
+#baselineWin 5 126
+#signalWin 130 900 7 pol2
+## <templateFit>  
+## file data/digitizer_templates_H4_Oct2018.root tmpl_vfe_clk160
+## fitWin 0. 10 21
+## </templateFit>
+#</CLK>
 
 #<FilterCorruptedEvents>
 #pluginType FormulaFilter
